@@ -1,7 +1,7 @@
 #!/usr/bin/perl -w
 use strict;
 use Gtk2::TestHelper
-  tests => 20,
+  tests => 23,
   noinit => 1,
   at_least_version => [2, 4, 0, "GtkTreeModelFilter is new in 2.4"];
 
@@ -16,6 +16,12 @@ $list -> set($list -> append(), 0 => 23);
 
 my $filter = Gtk2::TreeModelFilter -> new($list);
 isa_ok($filter, "Gtk2::TreeModelFilter");
+
+# make sure the GInterfaces are set up correctly
+isa_ok($filter, "Gtk2::TreeModel");
+isa_ok($filter, "Gtk2::TreeDragSource");
+is(Gtk2::TreeModelFilter->can('get'), Gtk2::TreeModel->can('get'),
+   ' $filter->get should be Gtk2::TreeModel::get');
 
 $filter = Gtk2::TreeModelFilter -> new($list, undef);
 isa_ok($filter, "Gtk2::TreeModelFilter");
@@ -54,5 +60,5 @@ $filter -> set_modify_func("Glib::Int", sub { warn @_; }, 42);
 
 __END__
 
-Copyright (C) 2003 by the gtk2-perl team (see the file AUTHORS for the
+Copyright (C) 2003-2005 by the gtk2-perl team (see the file AUTHORS for the
 full list).  See LICENSE for more information.
