@@ -1,3 +1,10 @@
+2005/01/16 02:34 (-0400) muppetman
+
+	* xs/GtkTreeModelFilter.xs, t/GtkTreeModelFilter.t: Set up @ISA 
+	to reflect the fact that GtkTreeModelFilter implements the
+	GtkTreeModel and GtkTreeDragSource interfaces.  Add tests to
+	verify.
+
 2004/10/14 15:20 (-0400) muppetman
 
 	* Makefile.PL: use PREREQ_PM in both WriteMakefile calls, so META.yml
